test/known_problems/should_pass/generator_var_shadow.erl
-module(generator_var_shadow).
-export([f/2]).

-spec f(boolean(), [integer()]) -> [integer()].
f(X, Xs) ->
    [X || X <- Xs].
